[gd_scene load_steps=51 format=3 uid="uid://bioohv47js651"]

[ext_resource type="Script" uid="uid://c8vs6jfdt5lrb" path="res://scripts/lam_ang.gd" id="1_67xbk"]
[ext_resource type="Texture2D" uid="uid://bf2r4yqoq5sfr" path="res://assets/Sprites/Lam-ang/lam-ang idle spritesheet.png" id="1_qestl"]
[ext_resource type="Texture2D" uid="uid://d0e2vdb0hpbaj" path="res://assets/Sprites/Lam-ang/lam-ang iswing sword angry spritesheet.png" id="2_5t7uf"]
[ext_resource type="Texture2D" uid="uid://ult3cm3ocub7" path="res://assets/Sprites/Lam-ang/lam-ang hurt spritesheet.png" id="2_ad0y5"]
[ext_resource type="Resource" uid="uid://dbnujrtlpcy0i" path="res://Inventory/Item/playerInventory.tres" id="2_fewss"]
[ext_resource type="Texture2D" uid="uid://15e7hnpffcr1" path="res://assets/Sprites/Lam-ang/lam-ang front walk spritesheet.png" id="3_h7kcq"]
[ext_resource type="Texture2D" uid="uid://dn7ncb1xcmhoj" path="res://assets/Sprites/Lam-ang/lam-ang side walk spritesheet.png" id="4_e34qr"]
[ext_resource type="Texture2D" uid="uid://cxpdxget7wu2y" path="res://assets/Sprites/Lam-ang/lam-ang hurt _w sword spritesheet.png" id="4_yusw4"]
[ext_resource type="Texture2D" uid="uid://ddxg0illq4jmm" path="res://assets/Sprites/Lam-ang/lam-ang back walk spritesheet.png" id="5_d5ujj"]
[ext_resource type="Texture2D" uid="uid://bmuwi5ovm18yy" path="res://assets/Sprites/Lam-ang/lam-ang idle _w sword spritesheet.png" id="6_fewss"]
[ext_resource type="Texture2D" uid="uid://dj6smqf84dkab" path="res://assets/Sprites/Lam-ang/lam-ang idle _w sword angry spritesheet.png" id="7_35ntw"]
[ext_resource type="PackedScene" uid="uid://c28xj6l2ghcpl" path="res://GUI/scenes/inventory_gui.tscn" id="11_yusw4"]
[ext_resource type="PackedScene" uid="uid://clfgtq4jq5lod" path="res://GUI/scenes/hotbar.tscn" id="14_l2381"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l2381"]
atlas = ExtResource("2_5t7uf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl8sx"]
atlas = ExtResource("2_5t7uf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl61q"]
atlas = ExtResource("2_5t7uf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3lmq"]
atlas = ExtResource("2_ad0y5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oh65"]
atlas = ExtResource("2_ad0y5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sv6y"]
atlas = ExtResource("4_yusw4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2emm"]
atlas = ExtResource("4_yusw4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_heici"]
atlas = ExtResource("4_yusw4")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67xbk"]
atlas = ExtResource("1_qestl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsur8"]
atlas = ExtResource("1_qestl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7udg"]
atlas = ExtResource("1_qestl")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7kcq"]
atlas = ExtResource("1_qestl")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bah46"]
atlas = ExtResource("6_fewss")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_imw4i"]
atlas = ExtResource("6_fewss")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_or7ha"]
atlas = ExtResource("6_fewss")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmhk6"]
atlas = ExtResource("6_fewss")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qecjc"]
atlas = ExtResource("7_35ntw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh1e5"]
atlas = ExtResource("7_35ntw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iobbg"]
atlas = ExtResource("7_35ntw")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqehh"]
atlas = ExtResource("7_35ntw")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gi7s"]
atlas = ExtResource("3_h7kcq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6747r"]
atlas = ExtResource("3_h7kcq")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohpkt"]
atlas = ExtResource("4_e34qr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts840"]
atlas = ExtResource("4_e34qr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai1l7"]
atlas = ExtResource("4_e34qr")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocg20"]
atlas = ExtResource("4_e34qr")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x7sn"]
atlas = ExtResource("5_d5ujj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpdt8"]
atlas = ExtResource("5_d5ujj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qestl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2381")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl8sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl61q")
}],
"loop": true,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_q3lmq")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_2oh65")
}],
"loop": true,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_4sv6y")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_l2emm")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_heici")
}],
"loop": true,
"name": &"hurt_with_sword",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_67xbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsur8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7udg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7kcq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bah46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imw4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or7ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmhk6")
}],
"loop": true,
"name": &"idle_with_sword",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qecjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh1e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iobbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqehh")
}],
"loop": true,
"name": &"idle_with_sword_angry",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gi7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6747r")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohpkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts840")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai1l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocg20")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x7sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpdt8")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_d5ujj"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_stb0u"]
radius = 9.05539

[sub_resource type="CircleShape2D" id="CircleShape2D_ad0y5"]
radius = 19.235384

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3lmq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stb0u"]
bg_color = Color(0.968627, 0.337255, 0.384314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2oh65"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ad0y5"]
bg_color = Color(0.905882, 0.980392, 0.196078, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_q3lmq"]
radius = 21.0

[node name="Lam-Ang" type="CharacterBody2D"]
process_mode = 3
collision_layer = 3
script = ExtResource("1_67xbk")
inventory = ExtResource("2_fewss")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_qestl")
animation = &"idle"
autoplay = "hurt"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_d5ujj")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_stb0u")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_ad0y5")

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -108.0
offset_right = -98.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 8
theme_override_styles/background = SubResource("StyleBoxFlat_q3lmq")
theme_override_styles/fill = SubResource("StyleBoxFlat_stb0u")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="HealthBar"]

[node name="EnergyBar" type="ProgressBar" parent="."]
z_index = 5
offset_left = -192.0
offset_top = -92.0
offset_right = -115.0
offset_bottom = -85.0
theme_override_styles/background = SubResource("StyleBoxFlat_2oh65")
theme_override_styles/fill = SubResource("StyleBoxFlat_ad0y5")
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="EnergyBar"]

[node name="XPBar" type="ProgressBar" parent="."]
offset_left = -192.0
offset_top = -85.0
offset_right = -116.0
offset_bottom = -81.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="CoinLabel" type="Label" parent="."]
z_index = 5
clip_contents = true
anchors_preset = -1
anchor_top = -0.009259259
anchor_bottom = -0.009259259
offset_left = -192.0
offset_top = -81.0
offset_right = -97.0
offset_bottom = -64.0
theme_override_font_sizes/font_size = 12
text = "0"
autowrap_trim_flags = 0
metadata/_edit_use_anchors_ = true

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="deal_attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="RegenTimer" type="Timer" parent="."]

[node name="PassiveCooldown" type="Timer" parent="."]

[node name="EnergyRegenTimer" type="Timer" parent="."]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="SprintEnergyDecay" type="Timer" parent="."]

[node name="HurtTimer" type="Timer" parent="."]

[node name="Direction" type="Marker2D" parent="."]

[node name="ActionableFinder" type="Area2D" parent="Direction"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/ActionableFinder"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_q3lmq")

[node name="InventoryGui" parent="." instance=ExtResource("11_yusw4")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -59.0
offset_right = 100.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" parent="." instance=ExtResource("14_l2381")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -58.0
offset_top = 80.0
offset_right = 58.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="body_entered" from="hitbox" to="." method="_on_punch_body_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_punch_body_exited"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_cooldown" to="." method="_on_deal_attack_cooldown_timeout"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
[connection signal="timeout" from="PassiveCooldown" to="." method="_on_passive_cooldown_timeout"]
[connection signal="timeout" from="EnergyRegenTimer" to="." method="_on_energy_regen_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="SprintEnergyDecay" to="." method="_on_sprint_energy_decay_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
[connection signal="closed" from="InventoryGui" to="." method="_on_inventory_gui_closed"]
[connection signal="opened" from="InventoryGui" to="." method="_on_inventory_gui_opened"]
